Begginings of a Script system

--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -130,6 +130,10 @@
     <TypeScriptCompile Include="Code\Scene\Scene.ts" />
     <TypeScriptCompile Include="Code\Scene\Skybox.ts" />
     <TypeScriptCompile Include="Code\Scene\Weapon.ts" />
+    <TypeScriptCompile Include="Code\Scripted\ActionParser.ts" />
+    <TypeScriptCompile Include="Code\Scripted\ScriptController.ts" />
+    <TypeScriptCompile Include="Code\Scripted\ScriptedActions.ts" />
+    <TypeScriptCompile Include="Code\Scripted\ScriptedEvent.ts" />
     <TypeScriptCompile Include="Code\Settings.ts" />
     <TypeScriptCompile Include="Code\StateMachine\State.ts" />
     <TypeScriptCompile Include="Code\StateMachine\StateMachine.ts" />
