--- a/ProjectThralldom/web.config
+++ b/ProjectThralldom/web.config
@@ -11,7 +11,8 @@
   <system.webServer>
     <directoryBrowse enabled="true"/>
     <handlers>
-      <add name="StaticHandler" verb="*" path="*.anim" type="System.Web.StaticFileHandler" preCondition="integratedMode" />
+      <add name="AnimHandler" verb="*" path="*.anim" type="System.Web.StaticFileHandler" preCondition="integratedMode" />
+      <add name="ScriptHandler" verb="*" path="*.script" type="System.Web.StaticFileHandler" preCondition="integratedMode" />
     </handlers>
   </system.webServer>
 </configuration>
