--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -43,17 +43,30 @@
     <Content Include="Content\Models\bore\three.jpg" />
     <Content Include="Content\Models\bore\two.jpg" />
     <Content Include="Content\Models\bore\walls.jpg" />
-    <Content Include="Content\Models\Test\diff2_01.jpg" />
-    <Content Include="Content\Models\Test\diff2_02.jpg" />
-    <Content Include="Content\Models\Test\diff2_03.jpg" />
-    <Content Include="Content\Models\Test\diff3_02.jpg" />
-    <Content Include="Content\Models\Test\diff3_03.jpg" />
-    <Content Include="Content\Models\Test\diff_01.jpg" />
-    <Content Include="Content\Models\Test\diff_02.jpg" />
-    <Content Include="Content\Models\Test\diff_03.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\0a565e37.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\146b809b.png" />
+    <Content Include="Content\Models\Buildings\Houses\1738d9fa.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\1e5f86cc.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\229ec286.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\22b14ca9.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\2a94bcde.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\3e52ea20.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\4d36ac85.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\52bac0e2.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\598756b7.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\6b696b5f.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\a97ad49c.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\b381b054.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\cacb10e5.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\cbdd7173.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\d985bf06.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\House_03.js" />
+    <Content Include="Content\Models\Buildings\Houses\mill.js" />
+    <Content Include="Content\Models\Buildings\Houses\mint.js" />
+    <Content Include="Content\Models\Buildings\Houses\oldwarehouse.js" />
+    <Content Include="Content\Models\Buildings\Houses\Tavern.js" />
+    <Content Include="Content\Models\Buildings\Houses\well.js" />
     <Content Include="Content\Models\Heroes\Boycho\BoychoAnimation.js" />
-    <Content Include="Content\Models\Buildings\house_two.js" />
-    <Content Include="Content\Models\Buildings\Lightmap.png" />
     <Content Include="Content\Models\Buildings\Monastery\monastery_object.js" />
     <Content Include="Content\Models\Buildings\Monastery\monastery_texture.jpg" />
     <Content Include="Content\Models\Buildings\House_01\rooftxt.jpg" />
@@ -61,21 +74,12 @@
     <Content Include="Content\Models\Buildings\Barrels\barrels_one.js" />
     <Content Include="Content\Models\Buildings\Barrels\barrels_two.js" />
     <Content Include="Content\Models\Buildings\House_02\four.jpg" />
-    <Content Include="Content\Models\Buildings\Lightmap.png" />
     <Content Include="Content\Models\Buildings\House_01\objectHouse1.js" />
     <Content Include="Content\Models\Buildings\House_02\objectMarket.js" />
     <Content Include="Content\Models\Buildings\House_02\one.jpg" />
-    <Content Include="Content\Models\Buildings\objectTerrain.js" />
-    <Content Include="Content\Models\Buildings\rooftxt.jpg" />
     <Content Include="Content\Models\Buildings\House_02\three.jpg" />
     <Content Include="Content\Models\Buildings\House_02\two.jpg" />
     <Content Include="Content\Models\Buildings\House_01\walls.jpg" />
-    <Content Include="Content\Models\Buildings\terraintextr.jpg" />
-    <Content Include="Content\Models\Buildings\Test1.js" />
-    <Content Include="Content\Models\Buildings\Test1.png" />
-    <Content Include="Content\Models\Engineer\engineer.js" />
-    <Content Include="Content\Models\Engineer\engineer_head.jpg" />
-    <Content Include="Content\Models\Engineer\engineer_red.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Boycho_Cloth.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Boycho_Head.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Boycho_Left_Eye.jpg" />
@@ -86,19 +90,21 @@
     <Content Include="Content\Models\Heroes\Boycho\Boycho_Tie.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\PistolAnimation.js" />
     <Content Include="Content\Models\Heroes\Boycho\BoychoAnimation.js" />
-    <Content Include="Content\Models\Spartan\Ccloth.png" />
-    <Content Include="Content\Models\Spartan\Cgold.png" />
-    <Content Include="Content\Models\Spartan\Cnormal.png" />
-    <Content Include="Content\Models\Spartan\Cskin.png" />
-    <Content Include="Content\Models\Spartan\Csword.png" />
-    <Content Include="Content\Models\Spartan\spartan.js" />
     <Content Include="Content\Models\Heroes\Boycho\Pistol.jpg" />
+    <Content Include="Content\Models\Terrain\terrain.js" />
+    <Content Include="Content\Models\Terrain\terrainTextureSmall.jpg" />
+    <Content Include="Content\Models\Terrain\terrainTexture.jpg" />
     <Content Include="Content\Quests\default.js" />
     <Content Include="Content\Scenes\default.js" />
     <Content Include="Code\StringExtensions.min.js.map">
       <DependentUpon>StringExtensions.min.js</DependentUpon>
     </Content>
     <None Include="Content\Scripts\RandomStuff.script" />
+    <Content Include="Content\Sounds\footsteps.mp3" />
+    <Content Include="Content\Sounds\forest_background.mp3" />
+    <Content Include="Content\Sounds\gunshot.mp3" />
+    <Content Include="Content\Sounds\info.txt" />
+    <Content Include="Content\Sounds\running.mp3" />
     <Content Include="Content\Textures\BlackWhiteChecker.jpg" />
     <Content Include="Content\Textures\BlueGreenChecker.png" />
     <Content Include="Content\Textures\Crosshair.png" />
@@ -117,6 +123,8 @@
     <Content Include="Scripts\implementations\jquery.documentReady.js" />
     <Content Include="Scripts\implementations\stats.min.js" />
     <Content Include="Scripts\implementations\three.min.js" />
+    <Content Include="Scripts\implementations\Three.Plugins\THREE.AudioObject.js" />
+    <TypeScriptCompile Include="Scripts\typings\Three.Plugins\THREE.AudioObject.d.ts" />
     <Content Include="Tests\TestingPage.html" />
     <Content Include="web.config">
       <SubType>Designer</SubType>
@@ -142,6 +150,7 @@
     <TypeScriptCompile Include="Code\Constants.ts" />
     <TypeScriptCompile Include="Code\FrameInfo.ts" />
     <TypeScriptCompile Include="Code\Managers\AIManager.ts" />
+    <TypeScriptCompile Include="Code\Managers\AudioManager.ts" />
     <TypeScriptCompile Include="Code\Managers\PhysicsManager.ts" />
     <TypeScriptCompile Include="Code\Objectives.ts" />
     <TypeScriptCompile Include="Code\Quest.ts" />
@@ -161,7 +170,6 @@
     <TypeScriptCompile Include="Code\Scene\ISelectableObject.ts" />
     <TypeScriptCompile Include="Code\Scene\LaserOfDeath.ts" />
     <TypeScriptCompile Include="Code\Main.ts" />
-    <TypeScriptCompile Include="Code\Managers\ContentLibrary.ts" />
     <TypeScriptCompile Include="Code\Managers\ContentManager.ts" />
     <TypeScriptCompile Include="Code\Managers\IDeferred.ts" />
     <TypeScriptCompile Include="Code\Managers\InputManager.ts" />
@@ -188,12 +196,7 @@
     <TypeScriptCompile Include="Scripts\typings\three.d.ts" />
     <TypeScriptCompile Include="Tests\Tests.ts" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\Models\Buildings\Barrels\" />
-    <Folder Include="Content\Models\Buildings\House_01\" />
-    <Folder Include="Content\Models\Buildings\House_02\" />
-    <Folder Include="Content\Models\Buildings\Monastery\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
