Now with subtitles. Also renamed scene to world

--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -122,8 +122,10 @@
     <Content Include="Scripts\implementations\ammo.js" />
     <Content Include="Scripts\implementations\jquery.documentReady.js" />
     <Content Include="Scripts\implementations\stats.min.js" />
+    <Content Include="Scripts\implementations\subtitles.js" />
     <Content Include="Scripts\implementations\three.min.js" />
     <Content Include="Scripts\implementations\Three.Plugins\THREE.AudioObject.js" />
+    <TypeScriptCompile Include="Scripts\typings\subtitles.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\Three.Plugins\THREE.AudioObject.d.ts" />
     <Content Include="Tests\TestingPage.html" />
     <Content Include="web.config">
@@ -133,6 +135,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="Content\Models\Heroes\Boycho\BoychoAnimation.anim" />
+    <Content Include="Content\Subtitles\Liars.srt" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
@@ -175,10 +178,9 @@
     <TypeScriptCompile Include="Code\Managers\InputManager.ts" />
     <TypeScriptCompile Include="Code\Managers\MouseData.ts" />
     <TypeScriptCompile Include="Code\Scene\LoadableObject.ts" />
-    <TypeScriptCompile Include="Code\Scene\Scene.ts" />
+    <TypeScriptCompile Include="Code\Scene\World.ts" />
     <TypeScriptCompile Include="Code\Scene\Skybox.ts" />
     <TypeScriptCompile Include="Code\Scene\Weapon.ts" />
-    <TypeScriptCompile Include="Code\Scripted\ActionParser.ts" />
     <TypeScriptCompile Include="Code\Scripted\ScriptController.ts" />
     <TypeScriptCompile Include="Code\Scripted\ScriptedActions.ts" />
     <TypeScriptCompile Include="Code\Scripted\ScriptedEvent.ts" />
