--- a/ProjectThralldom/web.config
+++ b/ProjectThralldom/web.config
@@ -13,6 +13,7 @@
     <handlers>
       <add name="AnimHandler" verb="*" path="*.anim" type="System.Web.StaticFileHandler" preCondition="integratedMode" />
       <add name="ScriptHandler" verb="*" path="*.script" type="System.Web.StaticFileHandler" preCondition="integratedMode" />
+      <add name="SubsHandler" verb="*" path="*.srt" type="System.Web.StaticFileHandler" preCondition="integratedMode" />
     </handlers>
   </system.webServer>
 </configuration>
