--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -103,6 +103,7 @@
     <Content Include="Content\Sounds\footsteps.mp3" />
     <Content Include="Content\Sounds\forest_background.mp3" />
     <Content Include="Content\Sounds\gunshot.mp3" />
+    <Content Include="Content\Sounds\heavy_song.mp3" />
     <Content Include="Content\Sounds\info.txt" />
     <Content Include="Content\Sounds\running.mp3" />
     <Content Include="Content\Textures\BlackWhiteChecker.jpg" />
