--- a/Thralldom.OfflineTool/Thralldom.OfflineTool.csproj
+++ b/Thralldom.OfflineTool/Thralldom.OfflineTool.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="AppBuilder.cs" />
     <Compile Include="Application.cs" />
+    <Compile Include="FuncExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
