--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -106,7 +106,7 @@
     <Content Include="Content\Sounds\forest_background.mp3" />
     <Content Include="Content\Sounds\gunshot.mp3" />
     <Content Include="Content\Sounds\heavy_song.mp3" />
-    <Content Include="Content\Sounds\info.txt" />
+    <Content Include="Docs\info.txt" />
     <Content Include="Content\Sounds\running.mp3" />
     <Content Include="Content\Textures\BlackWhiteChecker.jpg" />
     <Content Include="Content\Textures\BlueGreenChecker.png" />
@@ -128,6 +128,10 @@
     <Content Include="Docs\Presentation.min.html">
       <DependentUpon>Presentation.html</DependentUpon>
     </Content>
+    <Content Include="Images\levski.jpg" />
+    <Content Include="Images\shipka.jpg" />
+    <Content Include="Images\shipka2.jpg" />
+    <Content Include="Images\winged.jpg" />
     <Content Include="Scripts\implementations\ammo.js" />
     <Content Include="Scripts\implementations\ammo.small.js" />
     <Content Include="Scripts\implementations\jquery.documentReady.js" />
@@ -155,6 +159,7 @@
     <Content Include="Content\Subtitles\dialog.srt" />
     <Content Include="Docs\Presentation.md" />
     <Content Include="Content\ScriptedEvents\RandomStuff.tscr" />
+    <Content Include="Fonts\Bulgaria_Moderna_Pro.otf" />
     <None Include="thralldom.js.bundle" />
     <Content Include="thralldom.min.js.map">
       <DependentUpon>thralldom.min.js</DependentUpon>
