Text property on quest objectives. UI encapsulated in another class

--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -128,14 +128,14 @@
     <Content Include="Docs\Presentation.min.html">
       <DependentUpon>Presentation.html</DependentUpon>
     </Content>
-    <Content Include="Images\Oudated\black_glass.jpg" />
+    <Content Include="Images\Outdated\black_glass.jpg" />
     <Content Include="Images\blank.cur" />
-    <Content Include="Images\Oudated\chrome.png" />
-    <Content Include="Images\Oudated\firefox.png" />
-    <Content Include="Images\Oudated\iexplorer.png" />
+    <Content Include="Images\Outdated\chrome.png" />
+    <Content Include="Images\Outdated\firefox.png" />
+    <Content Include="Images\Outdated\iexplorer.png" />
     <Content Include="Images\levski.jpg" />
-    <Content Include="Images\Oudated\opera.png" />
-    <Content Include="Images\Oudated\safari.png" />
+    <Content Include="Images\Outdated\opera.png" />
+    <Content Include="Images\Outdated\safari.png" />
     <Content Include="Images\shipka.jpg" />
     <Content Include="Images\shipka2.jpg" />
     <Content Include="Images\winged.jpg" />
@@ -155,6 +155,7 @@
     <Content Include="Scripts\implementations\three.min.js" />
     <Content Include="Scripts\implementations\Three.Plugins\THREE.AudioObject.js" />
     <TypeScriptCompile Include="Code\Managers\CombatManager.ts" />
+    <TypeScriptCompile Include="Code\Managers\UIManager.ts" />
     <TypeScriptCompile Include="Scripts\typings\subtitles.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\Three.Plugins\THREE.AudioObject.d.ts" />
     <Content Include="Tests\TestingPage.html" />
