Changed Boycho with soldier and added texture

--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -75,6 +75,7 @@
     <Content Include="Content\Models\Heroes\Boycho\Boycho_Tie.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Cloth.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Cloths.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\ClothSkin.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Head.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Pistol.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\PistolAnimation.js" />
