--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -77,6 +77,7 @@
     <Content Include="Content\Models\Heroes\Boycho\Cloths.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\ClothSkin.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Head.jpg" />
+    <Content Include="Content\Models\Heroes\Boycho\k98.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\Pistol.jpg" />
     <Content Include="Content\Models\Heroes\Boycho\PistolAnimation.js" />
     <Content Include="Content\Models\Terrain\terrain.js" />
