--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -97,6 +97,18 @@
     <Content Include="Content\Sounds\forest_background.mp3" />
     <Content Include="Content\Sounds\gunshot.mp3" />
     <Content Include="Content\Sounds\heavy_song.mp3" />
+    <Content Include="Content\Textures\Skyboxes\Night\negX.png" />
+    <Content Include="Content\Textures\Skyboxes\Night\negY.png" />
+    <Content Include="Content\Textures\Skyboxes\Night\negZ.png" />
+    <Content Include="Content\Textures\Skyboxes\Night\posX.png" />
+    <Content Include="Content\Textures\Skyboxes\Night\posY.png" />
+    <Content Include="Content\Textures\Skyboxes\Night\posZ.png" />
+    <Content Include="Content\Textures\Skyboxes\Sunset\negX.png" />
+    <Content Include="Content\Textures\Skyboxes\Sunset\negZ.png" />
+    <Content Include="Content\Textures\Skyboxes\Sunset\posZ.png" />
+    <Content Include="Content\Textures\Skyboxes\Sunset\negY.png" />
+    <Content Include="Content\Textures\Skyboxes\Sunset\posY.png" />
+    <Content Include="Content\Textures\Skyboxes\Sunset\posX.png" />
     <Content Include="Docs\info.txt" />
     <Content Include="Content\Sounds\running.mp3" />
     <Content Include="Content\Textures\BlackWhiteChecker.jpg" />
@@ -105,12 +117,12 @@
     <Content Include="Content\Textures\Grass.jpg" />
     <Content Include="Content\Textures\RedChecker.png" />
     <Content Include="Content\Textures\DirtTexture.jpg" />
-    <Content Include="Content\Textures\Skybox\negX.png" />
-    <Content Include="Content\Textures\Skybox\negY.png" />
-    <Content Include="Content\Textures\Skybox\posZ.png" />
-    <Content Include="Content\Textures\Skybox\posX.png" />
-    <Content Include="Content\Textures\Skybox\posY.png" />
-    <Content Include="Content\Textures\Skybox\negZ.png" />
+    <Content Include="Content\Textures\Skyboxes\Day\negX.png" />
+    <Content Include="Content\Textures\Skyboxes\Day\negY.png" />
+    <Content Include="Content\Textures\Skyboxes\Day\posZ.png" />
+    <Content Include="Content\Textures\Skyboxes\Day\posX.png" />
+    <Content Include="Content\Textures\Skyboxes\Day\posY.png" />
+    <Content Include="Content\Textures\Skyboxes\Day\negZ.png" />
     <Content Include="default.htm" />
     <Content Include="Content\Fonts\Helvetiker.js" />
     <Content Include="Docs\PresentationText.html">
